--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,6 +19,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">EDIT</th>
           <th scope="col">DELETE</th>
         </tr>
       </thead>
@@ -27,9 +28,16 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td><form method="POST" action="/urls/<%= url %>/delete">
-              <input type ="submit" value="DELETE">
-            </form></td>
+            <td><form method="GET" action="/urls/<%= url %>">
+              <button class="btn btn-primary" style="background-color: white; ;border-color: blue; color: blue" input type ="submit">EDIT</button>
+            </form>
+          </td>
+
+            <td>
+              <form method="POST" action="/urls/<%= url %>/delete">
+                <button class="btn btn-primary" style="background-color: white; ;border-color: red; color: red" input type ="submit">DELETE</button>
+            </form>
+          </td>
           </tr>
         <% } %>
       </tbody>
