Changed Edit button from a form to a reference

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -28,10 +28,9 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td><form method="GET" action="/urls/<%= url %>">
+            <td><a href="/urls/<%= url %>">
               <button class="btn btn-primary" style="background-color: white; ;border-color: blue; color: blue" input type ="submit">EDIT</button>
-            </form>
-          </td>
+            </td>
 
             <td>
               <form method="POST" action="/urls/<%= url %>/delete">
