Added Username to all pages

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,8 +10,9 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         <form method="POST" action="/login">
           <input type="text" name="username">
-          <button class="btn btn-primary" input type ="submit">Submit</button>
+          <button class="btn btn-primary" input type="submit">Submit</button>
         </form>
+        <label for="username"><%= username %></label>
       </div>
     </div>
   </nav>
