--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,11 +8,17 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <form method="POST" action="/login">
-          <input type="text" name="username">
-          <button class="btn btn-primary" input type="submit">Submit</button>
-        </form>
-        <label for="username"><%= username %></label>
+          <% if (username) { %>
+            </form>
+              <p>Logged in as: <%= username %></p>
+              <form method ="POST" action="/logout">
+              <button type="submit" class="logout">Logout</button>
+              </form>
+          <% } else { %>
+            <form method="POST" action="/login">
+              <input type="text" name="username">
+              <button type="submit" class="login">Login</button>
+          <% } %>
       </div>
     </div>
   </nav>
