Added Some Styling

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -6,18 +6,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
+        <div class="d-flex">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
           <% if (username) { %>
             </form>
-              <p>Logged in as: <%= username %></p>
-              <form method ="POST" action="/logout">
-              <button type="submit" class="logout">Logout</button>
+              <p>Logged in as: <%= username %>!</p>
+              <form style="margin-left: 100px;"   method ="POST" action="/logout">
+              <button style="background-color:#28a745; ;border-color: black; color: black" type="submit" class="logout">Logout</button>
               </form>
           <% } else { %>
             <form method="POST" action="/login">
               <input type="text" name="username">
-              <button type="submit" class="login">Login</button>
+              <button style="background-color:#28a745; ;border-color: black; color: black" type="submit" class="login">Login</button>
           <% } %>
       </div>
     </div>
