--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang ="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <title>Login</title>
 </head>
 <body>
+  <%- include('partials/_header') %>
+<h2>Login</h2>
     <form method="POST" action="/login">
-        <p>Email:<input type="email" name="email"/></p>
-        <p>Password:<input type="password" name="password"/></p>
-        <button>Login!</button>
+        <p>Email Address:<input type="email" placeholder="Enter email" name="email"/></p>
+        <p>Password:<input type="password" placeholder="Password" name="password"/></p>
+        <button type="submit" class="btn btn-primary">Login!</button>
     </form>
 </body>
 </html>
