--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang ="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Page</title>
-</head>
-<body>
-    <form method="POST" action="/register">
-        <p>Email:<input type="email" name="email"/></p>
-        <p>Password:<input type="password" name="password"/></p>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <title>Registration</title>
+    </head>
+        <body>
+        <%- include('partials/_header') %>
+        <h2>Register</h2>
+        <form method="POST" action="/register">
+        <p>Email:<input type="email" placeholder="email" name="email"/></p>
+        <p>Password:<input type="password" placeholder="password" name="password"/></p>
         <button type="submit" class="btn btn-primary">Register!</button>
-    </form>
-</body>
+        </form>
+    </body>
 </html>
