Add User Permissions

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,7 +27,7 @@
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><%= urls[url].longURL %></td>
             <td><a href="/urls/<%= url %>">
               <button class="btn btn-primary" style="background-color: white; ;border-color: blue; color: blue" input type ="submit">EDIT</button>
             </td>
