Refactored, Added Functionality, Dried Up Code, Added README

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,18 +5,31 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link ml-auto" href="/urls">My URLs</a>
-        <a class="nav-item nav-link ml-auto" href="/urls/new">Create New URL</a>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-item nav-link" href="/urls">My URLs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        </li>
+      </ul>
+      <span class="d-flex justify-content-end">
         <% if (user) { %>
           </form>
+          <span class="navbar-text">
             <p>Logged in as: <%= user.email %>!</p>
+          </span>
             <form method ="POST" action="/logout">
             <button class="btn btn-primary" style="background-color:#28a745; ;border-color: black; color: black" input type="submit" class="logout">Logout</button>
             </form>
             <% } else { %>
-            <a class="nav-item nav-link mr-auto" href="/login">Login</a>
-            <a class="nav-item nav-link mr-auto" href="/register">Register</a>
+              <form>
+                <span class="navbar-text">
+              <p style="color: darkred" >YOU ARE NOT LOGGED IN!</p>
+            </span>
+            <a class="btn btn-outline-light" style="border-color: black; color: black" href="/login" role="button">Login</a>
+            <a class="btn btn-outline-light" style="border-color: black; color: black" href="/register" role="button">Register</a> &nbsp
+            </form>
           <% } %>
       </div>
     </div>
