--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -30,10 +30,11 @@
             <td><%= urls[url].longURL %></td>
             <td><a href="/urls/<%= url %>">
               <button class="btn btn-primary" style="background-color: white; ;border-color: blue; color: blue" input type ="submit">EDIT</button>
+            </a>
             </td>
 
             <td>
-              <form method="POST" action="/urls/<%= url %>/delete">
+              <form method="POST" action="<%= "/urls/"+url+"/delete?_method=DELETE" %>">
                 <button class="btn btn-primary" style="background-color: white; ;border-color: red; color: red" input type ="submit">DELETE</button>
             </form>
           </td>
