--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,7 +13,7 @@
       <div class="card-header"></div>
       <div class="card-body">
         <h5 class="card-title" style="font-weight: bold;">TinyURL for: <a href="/u/<%= longURL %>"></a><%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+        <form method="POST" action="/urls/<%= shortURL %>?_method=PUT" class="center">
 
         <form method="POST" action="/urls/<%= shortURL %>">
           <label for="longURL">Enter New URL:</label>
