--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,8 +10,8 @@
   <%- include('partials/_header') %>
 <h2>Login</h2>
     <form method="POST" action="/login">
-        <p>Email Address:<input type="email" placeholder="Enter email" name="email"/></p>
-        <p>Password:<input type="password" placeholder="Password" name="password"/></p>
+        <p>Email Address:<input type="email" placeholder="Enter email" name="email" required/></p>
+        <p>Password:<input type="password" placeholder="Password" name="password" required/></p>
         <button type="submit" class="btn btn-primary">Login!</button>
     </form>
 </body>
