--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,8 +10,8 @@
         <%- include('partials/_header') %>
         <h2>Register</h2>
         <form method="POST" action="/register">
-        <p>Email:<input type="email" placeholder="email" name="email"/></p>
-        <p>Password:<input type="password" placeholder="password" name="password"/></p>
+        <p>Email:<input type="email" placeholder="email" name="email" required/></p>
+        <p>Password:<input type="password" placeholder="password" name="password" required/></p>
         <button type="submit" class="btn btn-primary">Register!</button>
         </form>
     </body>
